Closes #7936 - Sanding and shimming on imagery and events TS look and feel. - Fixed scrollbar issue in imagery TS view when thumb goes beyond the right edge of the time frame.

--- a/src/plugins/events/components/events-view.scss
+++ b/src/plugins/events/components/events-view.scss
@@ -19,8 +19,8 @@
 
     &__container {
         // Holds event lines
-        background: $colorPlotBg;
-        box-shadow: inset $colorPlotAreaBorder 0 0 0 1px; // Using box-shadow instead of border to not affect box size
+        background-color: $colorPlotBg;
+        //box-shadow: inset $colorPlotAreaBorder 0 0 0 1px; // Using box-shadow instead of border to not affect box size
         position: absolute;
         top: $m; right: 0; bottom: $m; left: 0;
     }
